--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@aws-sdk/client-secrets-manager": "^3.266.1",
     "chalk": "^4",
     "onchange": "^7.1.0",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "prompts": "^2.4.2"
   }
 }
