--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chalk": "^4",
     "onchange": "^7.1.0",
     "prettier": "^2.8.1",
-    "prompts": "^2.4.2"
+    "prompts": "^2.4.2",
+    "tail": "^2.2.6"
   }
 }
