--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@aws-sdk/client-secrets-manager": "^3.266.1",
     "chalk": "^4",
+    "listr2": "^5.0.7",
     "onchange": "^7.1.0",
     "prettier": "^2.8.1",
     "prompts": "^2.4.2",
